setup: add permission for virtlogd to write logs anywhere
Change-Id: I5f1af1207deed235c515986fa3fcf884c5a2fd46
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -130,6 +130,12 @@
         mode: 0751
       become: true
 
+    - name: allow virtlogd to write console logs
+      selinux_permissive:
+        name: virtlogd_t
+        permissive: true
+      become: true
+
   handlers:
     - name: reboot
       debug:
