remove obsolete template variables
replaced with ost-images

Change-Id: I97a1053f777dac47848943f7265515edd0d9d37b
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/hc-basic-suite-master/LagoInitFile.in
+++ b/hc-basic-suite-master/LagoInitFile.in
@@ -19,8 +19,7 @@ domains:
     nics:
       - net: lago-{{ env.suite_name}}-net-management
     disks:
-      - template_name: {{ templates.host }}
-        type: template
+      - type: template
         template_type: qcow2
         path: {{ env.host_installed_image }}
         name: root
