deployment: run deploy-scripts from root_dir
deploy-script path is now relative to root_dir fixture($OST_REPO_ROOT)
and can't refer environment variables anymore. As the symlinking of suite
specific files is not maintainable we try to unify the suites in
common/deploy-scripts.

Change-Id: Iafb7a6e65f076a7b8f805401694de4e049d1f995
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/init-configs/1_hosted_engine_2_hosts.yml
+++ b/common/init-configs/1_hosted_engine_2_hosts.yml
@@ -33,8 +33,8 @@ domains:
         format: qcow2
     metadata:
       deploy-scripts:
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_storage.sh
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_storage_he_extra.sh
+        - common/deploy-scripts/setup_storage.sh
+        - common/deploy-scripts/setup_storage_he_extra.sh
 
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
@@ -58,7 +58,7 @@ domains:
         {%- endif %}
     metadata:
       deploy-scripts:
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_host.sh
+        - common/deploy-scripts/setup_host.sh
 {%- endfor %}
 
 nets:
