--- a/hc-basic-suite-master/LagoInitFile.in
+++ b/hc-basic-suite-master/LagoInitFile.in
@@ -48,10 +48,10 @@ domains:
       ovirt-capabilities:
         - snapshot-live-merge
       deploy-scripts:
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_host.sh
-        - $SUITE/hc_setup_host.sh
+        - common/deploy-scripts/setup_host.sh
+        - common/deploy-scripts/hc_setup_host.sh
         {% if loop.first -%}
-        - $SUITE/setup_first_host.sh
+        - common/deploy-scripts/setup_first_hc_host.sh
         {%- endif %}
 {%- endfor %}
 
