--- a/common/init-configs/1_engine_2_hosts.yml
+++ b/common/init-configs/1_engine_2_hosts.yml
@@ -34,9 +34,9 @@ domains:
     metadata:
       ovirt-engine-password: 123
       deploy-scripts:
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_sar_stat.sh
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_storage.sh
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_engine.sh
+        - common/deploy-scripts/setup_sar_stat.sh
+        - common/deploy-scripts/setup_storage.sh
+        - common/deploy-scripts/setup_engine.sh
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
     vm-type: default
@@ -55,8 +55,8 @@ domains:
         format: qcow2
     metadata:
       deploy-scripts:
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_sar_stat.sh
-        - $OST_REPO_ROOT/common/deploy-scripts/setup_host.sh
+        - common/deploy-scripts/setup_sar_stat.sh
+        - common/deploy-scripts/setup_host.sh
 {%- endfor %}
 nets:
   lago-{{ env.suite_name }}-net-management:
