--- a/common/init-configs/1_hosted_engine_2_hosts.yml
+++ b/common/init-configs/1_hosted_engine_2_hosts.yml
@@ -1,5 +1,5 @@
 domains:
-  lago-{{ env.suite_name }}-storage:
+  ost-{{ env.suite_name }}-storage:
     memory: 750
     vcpu: 1
     cpu: 1
@@ -37,7 +37,7 @@ domains:
         - common/deploy-scripts/setup_storage_he_extra.sh
 
 {%- for i in range(hostCount) %}
-  lago-{{ env.suite_name }}-host-{{ i }}:
+  ost-{{ env.suite_name }}-host-{{ i }}:
     vm-type: default
     memory: 5744
     nics:
