automation: Run check-patch on node-upgrade suite
Change-Id: I31d873fcc958d0f3a65bf00dae624d4ae0e9c1d1
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -47,6 +47,13 @@ stage:
                     jenkins_master: upstream
                     hostdistro: same
                     support-nesting-level: 2
+        - node-upgrade_suite_master:
+            distributions:
+              - el8:
+                  runtime-requirements:
+                    jenkins_master: upstream
+                    hostdistro: same
+                    support-nesting-level: 2
         - test-ost-container:
             runif:
               filechanged: ['automation/test-ost-container*', 'run-ost-container.sh']
