black: Use black on 'ost_utils.backend'
Change-Id: I8ac710c9ecf4caf920de43fbc081af691e5c6ddd
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -62,6 +62,7 @@ commands =
         basic-suite-master/test-scenarios/test_001_initialize_engine.py \
         basic-suite-master/test-scenarios/test_002_bootstrap.py \
         ost_utils/ost_utils/ansible \
+        ost_utils/ost_utils/backend \
         ost_utils/ost_utils/coverage \
         ost_utils/ost_utils/deployment_utils \
         ost_utils/ost_utils/pytest \
