black: Apply black to ansible ost_utils
Change-Id: Ib2df7e6bcc5b2f22c8c71787734f22fe609b72b5
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,7 @@ commands =
         -S \
         --check \
         --diff \
+        ost_utils/ost_utils/ansible \
         ost_utils/ost_utils/coverage \
         ost_utils/ost_utils/deployment_utils \
         ost_utils/ost_utils/pytest \
