--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,9 @@ commands =
         -S \
         --check \
         --diff \
+        basic-suite-master/test-scenarios/conftest.py \
+        basic-suite-master/test-scenarios/test_001_initialize_engine.py \
+        basic-suite-master/test-scenarios/test_002_bootstrap.py \
         ost_utils/ost_utils/ansible \
         ost_utils/ost_utils/coverage \
         ost_utils/ost_utils/deployment_utils \
