black: Use on ansible suite
Change-Id: Id9847cf68808d420e5a419ef06d792f6be133e0b
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,7 @@ commands =
         -S \
         --check \
         --diff \
+        ansible-suite-master/test-scenarios \
         basic-suite-master/test-scenarios/conftest.py \
         basic-suite-master/test-scenarios/test_001_initialize_engine.py \
         basic-suite-master/test-scenarios/test_002_bootstrap.py \
