network: test ovn physnet - make ipv6 compatible
1. Ddnsmasq does not manage Cirros VM IPv6 addresses. Adding a static
address instead and pinging the address instead of the VM's hostname.
2. Adding ether_type to the playbook that adds a security group rule
according to the ip version being run
3. Enlarge MTU to 1500 as the minimum for IPv6 is 1280, and adjusting
the IP header size according to ip version being run.

Change-Id: I0c9f6c3c5052a32da190e37ed30a344ef36f72ae
Signed-off-by: Eitan Raviv <eraviv@redhat.com>

--- a/network-suite-master/ansible/apply_icmp_rule_on_default_sec_group.yml
+++ b/network-suite-master/ansible/apply_icmp_rule_on_default_sec_group.yml
@@ -11,3 +11,4 @@
         security_group: Default
         protocol: icmp
         remote_ip_prefix: "{{ source_ip }}"
+        ethertype: "{{ ether_type }}"
