black: Finish ost_utils re-formatting
Change-Id: I9e80156f3e30b4964cae4cd20cfbfa12e51ad6df
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -61,13 +61,7 @@ commands =
         basic-suite-master/test-scenarios/conftest.py \
         basic-suite-master/test-scenarios/test_001_initialize_engine.py \
         basic-suite-master/test-scenarios/test_002_bootstrap.py \
-        ost_utils/ost_utils/ansible \
-        ost_utils/ost_utils/backend \
-        ost_utils/ost_utils/coverage \
-        ost_utils/ost_utils/deployment_utils \
-        ost_utils/ost_utils/pytest \
-        ost_utils/ost_utils/selenium \
-        ost_utils/ost_utils/storage_utils
+        ost_utils/ost_utils
 
 [flake8]
 extend-ignore = E203
