basic: Finish applying black
Change-Id: I49049d34dc551b5faefb40237e8c8c99ab773485
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -58,12 +58,7 @@ commands =
         --check \
         --diff \
         ansible-suite-master/test-scenarios \
-        basic-suite-master/test-scenarios/conftest.py \
-        basic-suite-master/test-scenarios/test_001_initialize_engine.py \
-        basic-suite-master/test-scenarios/test_002_bootstrap.py \
-        basic-suite-master/test-scenarios/test_003_00_metrics_bootstrap.py \
-        basic-suite-master/test-scenarios/test_003_basic_networking.py \
-        basic-suite-master/test-scenarios/test_004_basic_sanity.py \
+        basic-suite-master/test-scenarios \
         ost_utils/ost_utils
 
 [flake8]
@@ -72,7 +67,7 @@ per-file-ignores =
     conftest.py:F401,F403
     # TODO: Reformat code so that most of these can be removed eventually
     ost_utils/ost_utils/pytest/*:F403,E501,F811,F401
-    basic-suite-master/test-scenarios/*:E225,E721,E741,F402,E712,F405,F841,E128,E111,E231,F632,E302,F811,F403,E261,F401,E501
+    basic-suite-master/test-scenarios/*:E721,E741,F402,E712,F405,F841,F632,F811,F403,F401,E501
     he-basic-suite-master/test-scenarios/*:E117,E203,E211,E262,E721,E741,F811,E128,E202,E712,F402,F841,E111,E131,E231,E265,E251,E122,E302,F401,F403,E261,E501
     hc-basic-suite-master/test-scenarios/*:E117,E203,E211,E265,E741,E202,E261,F403,E302,F401,E501
 show_source = True
