--- a/tox.ini
+++ b/tox.ini
@@ -59,6 +59,7 @@ commands =
         --diff \
         ansible-suite-master/test-scenarios \
         basic-suite-master/test-scenarios \
+        he-basic-suite-master/test-scenarios \
         ost_utils/ost_utils
 
 [flake8]
@@ -68,6 +69,6 @@ per-file-ignores =
     # TODO: Reformat code so that most of these can be removed eventually
     ost_utils/ost_utils/pytest/*:F403,E501,F811,F401
     basic-suite-master/test-scenarios/*:E721,E741,F402,E712,F405,F841,F632,F811,F403,F401,E501
-    he-basic-suite-master/test-scenarios/*:E117,E203,E211,E262,E721,E741,F811,E128,E202,E712,F402,F841,E111,E131,E231,E265,E251,E122,E302,F401,F403,E261,E501
+    he-basic-suite-master/test-scenarios/*:E721,E741,F811,E712,F402,F841,F401,F403,E501
     hc-basic-suite-master/test-scenarios/*:E117,E203,E211,E265,E741,E202,E261,F403,E302,F401,E501
 show_source = True
