--- a/tox.ini
+++ b/tox.ini
@@ -60,6 +60,9 @@ commands =
         ansible-suite-master/test-scenarios \
         basic-suite-master/test-scenarios \
         he-basic-suite-master/test-scenarios \
+        network-suite-master/fixtures \
+        network-suite-master/ovirtlib \
+        network-suite-master/testlib \
         ost_utils/ost_utils
 
 [flake8]
