tox: Check for broken symlinks
Change-Id: I9a3707cb83237b014c2ef1c9e0c074f24376254a
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = deps, flake8, pylint, black
+envlist = deps, flake8, pylint, black, broken-symlinks
 skipsdist = true
 
 [testenv]
@@ -64,6 +64,12 @@ commands =
         network-suite-master/ovirtlib \
         network-suite-master/testlib \
         ost_utils/ost_utils
+
+[testenv:broken-symlinks]
+allowlist_externals =
+    bash
+commands =
+    bash ./common/scripts/check_broken_symlinks.sh
 
 [flake8]
 extend-ignore = E203
