ansible-navigator: Fix ipv6-exclusive runs
Same as using plain 'podman', the container spawned by 'ansible-navigator'
by default doesn't support ipv6. One needs to pass the 'enable_ipv6=true'
option to have it working.

The latest 'ansible-navigator' version doesn't really have a way to pass
additional arguments to the container engine. This feature has been added
very recently [1].

This patch changes the 'ansible-navigator' version used to some git revision
until an official release will be made. Additionally we're respecting
the 'PODMAN_NETWORK_BACKEND' env variable same as we do for the selenium grid.

[1] https://github.com/ansible/ansible-navigator/commit/a69f52bb760e8ecd0bf3de8c4794d833e4e1e679

Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>
Change-Id: I1d555a75e9409c0194720ef17ac0502fa82eb63b

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = true
 basepython = python3.6
 
 [testenv:deps]
-sitepackages = true
+sitepackages = false
 passenv = *
 deps =
     -rrequirements.txt
@@ -27,7 +27,7 @@ commands =
         network-suite-master/test-scenarios
 
 [testenv:pylint]
-sitepackages = true
+sitepackages = false
 passenv = *
 deps =
     -rrequirements.txt
