--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # PIP requirements for OST
 -e ost_utils
 ovirt-engine-sdk-python>=4.4.15
-ansible-navigator
+# TODO: use a stable version once '--container-options' is there
+git+https://github.com/ansible/ansible-navigator.git@88bb7c148b23c82c53d1caa6c1e392d0d99eb018
 pytest==6.2.2
 # basic suite deps
 requests
