network: Apply black to test scenarios
Change-Id: I0234ac9309224a1d34633735aa9d7f0426628fff
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ commands =
         network-suite-master/fixtures \
         network-suite-master/ovirtlib \
         network-suite-master/testlib \
+        network-suite-master/test-scenarios \
         ost_utils/ost_utils
 
 [testenv:broken-symlinks]
