--- a/stdci.yaml
+++ b/stdci.yaml
@@ -5,6 +5,11 @@ stage:
       substage:
         - basic_suite_master:
             distributions:
+              - el8:
+                  runtime-requirements:
+                    jenkins_master: psi
+                    support-nesting-level: 2
+                    hostdistro: same
               - rhel8:
                   runtime-requirements:
                     jenkins_master: psi
