tox: move to ovirt-engine-sdk-python from pypi
We had issues with outdated rpms form time to time, this way we can
ensure we're using the right SDK regardless what's installed on the
host.

Change-Id: I944be4539084bf2772032be1ecc0d88e09aa278b
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -72,7 +72,6 @@
               - qemu-kvm
               - podman
               - python3-ansible-runner
-              - python3-ovirt-engine-sdk4
               - python3-paramiko
               - python3-requests
             state: latest
@@ -84,7 +83,12 @@
               - autoconf
               - automake
               - createrepo
+              - libcurl-devel
+              - libxml2-devel
+              - gcc
               - make
+              - openssl-devel
+              - python3-devel
               - rpm-build
               - virt-install
             state: latest
