setup: move to ansible-runner from pypi
similarly to sdk package let's just use ansible-runner for pypi instead
of (poorly) managed rpms.

Change-Id: I60d810b5f9b398029cc6f40ae530e3e31abcfbaa
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 ovirt-engine-sdk-python>=4.4.15
 # TODO: use a stable version once '--container-options' is there
 git+https://github.com/ansible/ansible-navigator.git@88bb7c148b23c82c53d1caa6c1e392d0d99eb018
+ansible-runner
 pytest==6.2.2
 # basic suite deps
 requests
