ost_utils: Make it a regular, local package
'ost_utils' works just fine acting as a regular, local python package -
we don't need to install it anymore.

Change-Id: Iebff0621634826a8a3603b529a0fe0809aa42630
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 # PIP requirements for OST
--e ost_utils
 ovirt-engine-sdk-python>=4.4.15
 # TODO: use a stable version once '--container-options' is there
 git+https://github.com/ansible/ansible-navigator.git@88bb7c148b23c82c53d1caa6c1e392d0d99eb018
@@ -10,3 +9,6 @@ requests
 selenium
 # network suite deps
 openstacksdk==0.36.4
+# ost_utils
+paramiko
+PyYAML
