--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     flake8==3.9.0
 commands =
     {envpython} -m flake8 \
-        ost_utils/ost_utils \
+        ost_utils \
         basic-suite-master/test-scenarios \
         hc-basic-suite-master/test-scenarios \
         he-basic-suite-master/test-scenarios \
@@ -37,7 +37,7 @@ commands =
         -j{env:PYLINT_JOBS:2} \
         --reports=no \
         --score=no \
-        ost_utils/ost_utils \
+        ost_utils \
         basic-suite-master/test-scenarios \
         hc-basic-suite-master/test-scenarios \
         he-basic-suite-master/test-scenarios \
@@ -64,7 +64,7 @@ commands =
         network-suite-master/ovirtlib \
         network-suite-master/testlib \
         network-suite-master/test-scenarios \
-        ost_utils/ost_utils
+        ost_utils
 
 [testenv:broken-symlinks]
 allowlist_externals =
@@ -83,7 +83,7 @@ extend-ignore = E203
 per-file-ignores =
     conftest.py:F401,F403
     # TODO: Reformat code so that most of these can be removed eventually
-    ost_utils/ost_utils/pytest/*:F403,E501,F811,F401
+    ost_utils/pytest/*:F403,E501,F811,F401
     basic-suite-master/test-scenarios/*:E721,E741,F402,E712,F405,F841,F632,F811,F403,F401,E501
     he-basic-suite-master/test-scenarios/*:E721,E741,F811,E712,F402,F841,F401,F403,E501
     hc-basic-suite-master/test-scenarios/*:E117,E203,E211,E265,E741,E202,E261,F403,E302,F401,E501
