--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -7,6 +7,7 @@
     default_ost_images_rpms:
       - ost-images-el8stream-engine-installed
       - ost-images-el8stream-host-installed
+      - ost-images-node-base
 
   tasks:
     - name: enable nested virtualization on intel
