Add network suite to run on el8stream
Change-Id: Idb0fdd70561d7a9a322f4db99c4f05a27157bb73
Signed-off-by: Galit <grosenth@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -24,6 +24,11 @@ stage:
                     hostdistro: same
         - network_suite_master:
             distributions:
+              - el8:
+                  runtime-requirements:
+                    jenkins_master: psi
+                    support-nesting-level: 2
+                    hostdistro: same
               - rhel8:
                   runtime-requirements:
                     jenkins_master: psi
