--- a/stdci.yaml
+++ b/stdci.yaml
@@ -17,6 +17,11 @@ stage:
                     hostdistro: same
         - he-basic_suite_master:
             distributions:
+              - el8:
+                  runtime-requirements:
+                    jenkins_master: psi
+                    support-nesting-level: 2
+                    hostdistro: same
               - rhel8:
                   runtime-requirements:
                     jenkins_master: psi
