setup: increase open FD limit per user
we suspect in CI that we sometimes run out of available FDs when
multiple jobs are running under the same user. Let's increase it, it
shouldn't hurt

Change-Id: Ieecbc840579a8352eddf4cd92edae65f148a0b9e
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -35,6 +35,13 @@
         line: net.ipv6.conf.all.accept_ra=2
       become: true
 
+    - name: increase per-user FD limit
+      lineinfile:
+        path: /etc/security/limits.d/ost.conf
+        create: yes
+        line: "*    soft    nofile    65535"
+      become: true
+
     - name: set up ost-images repo
       yum_repository:
         name: ost-images
