--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -60,11 +60,13 @@
           become: true
           register: epel
 
-        - name: install required packages for OST
+        - name: make sure any version of ansible is available
           dnf:
             name:
               - ansible
             state: present
+
+        - name: install required packages for OST
           dnf:
             name:
               - gcc
@@ -88,7 +90,11 @@
               - automake
               - createrepo
               - jq
+              - libguestfs-tools-c
+              - libvirt-client
+              - libvirt-daemon-config-network
               - make
+              - qemu-img
               - rpm-build
               - virt-install
             state: latest
