setup: fix setup_playbook ansible check
When running the setup it failed with:
"This command has to be run under the root user."
This allows the dnf module to run under root.

Signed-off-by: Martin Necas <mnecas@redhat.com>
Change-Id: I2ebb921cd50496890bccfbf09088fc106abbc5a9

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -65,6 +65,7 @@
             name:
               - ansible
             state: present
+          become: true
 
         - name: install required packages for OST
           dnf:
