Use ansible-navigator with runner_mode subprocess
Work around:

https://github.com/pexpect/pexpect/issues/373
https://github.com/ansible/ansible-navigator/issues/606

Change-Id: I510b6f42346785169b0f53c09efd2dc66908d027
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 # PIP requirements for OST
 ovirt-engine-sdk-python>=4.5.0
-ansible-navigator==1.1.0
+# A temporary workaround to run navigator with 'subprocess' runner mode, until
+# as the default 'pexpect' is unreliable
+# TODO: Revert once it's fixed:
+# https://github.com/ansible/ansible-navigator/issues/606
+git+git://github.com/didib/ansible-navigator@671bd6c9#egg=ansible-navigator
 ansible-runner
 pytest==6.2.2
 # basic suite deps
