--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -155,6 +155,14 @@
         permissive: true
       become: true
 
+    - name: allow port 2222 for socks proxy
+      firewalld :
+        zone: libvirt
+        port: 2222/tcp
+        permanent: yes
+        state: enabled
+      become: true
+
   handlers:
     - name: reboot
       debug:
