setup: create polkit rule per user
in case of multiple users we need separate configurations. Let's add
username to the file name.

Change-Id: I6e60cd34e954f4d4d2d042e30ca122b6b301f824
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -130,7 +130,7 @@
 
     - name: allow user to manage libvirt
       template:
-        dest: /etc/polkit-1/localauthority/50-local.d/ost-libvirt.pkla
+        dest: /etc/polkit-1/localauthority/50-local.d/ost-libvirt-{{ ansible_facts['user_id'] }}.pkla
         group: root
         mode: '0644'
         owner: root
