docs: fix oVirt system tests readthedocs
Change-Id: Iac50a07a8d63a4313d451c2e0853e4a211bcee1a
Signed-off-by: Galit <grosenth@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,20 @@ allowlist_externals =
 commands =
     bash ./common/scripts/check_copyright_notices.sh
 
+[testenv:docs]
+passenv = *
+setenv =
+    LC_ALL = C
+skip_install=True
+allowlist_externals =
+    mkdir
+commands =
+    mkdir -p docs/docs
+    {envpython} -m mkdocs build --clean --site-dir _build/html \
+        --config-file ./docs/mkdocs.yaml
+deps =
+    -r docs/requirements.txt
+
 [flake8]
 extend-ignore = E203
 per-file-ignores =
