requirements.txt: Use https protocol
github no longers supports unauthenticated git protocol:

https://github.blog/2021-09-01-improving-git-protocol-security-github/

Change-Id: Ia337a3407fa7d2b8fb83fe61d54bc2f87bf0dad3
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ ovirt-engine-sdk-python>=4.5.0
 # as the default 'pexpect' is unreliable
 # TODO: Revert once it's fixed:
 # https://github.com/ansible/ansible-navigator/issues/606
-git+git://github.com/didib/ansible-navigator@671bd6c9#egg=ansible-navigator
+git+https://github.com/didib/ansible-navigator.git@671bd6c9#egg=ansible-navigator
 ansible-runner
 pytest==6.2.2
 # basic suite deps
