github: move to .github
github cannot handle worflows in other directories

Change-Id: I749a54af61c603a4dadca1f4be290bdb64a7828e
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -1,4 +1,7 @@
-name: ost
+#
+# This is a reusable worflow to be triggered from other projects or manually
+#
+name: OST trigger
 
 on:
   workflow_call:
