github: handle both worflow_dispatch and worflow_call inputs
they are passed in different objects, but it's always one or the other.
Also add validation or pr_url for early exit

Change-Id: Ifb72e7dd75a162dcb1515b223e20f9d2d3f97fec
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -38,11 +38,12 @@ jobs:
       - name: trigger
         env:
           OST_APP_ID: 164117
-          PR_URL: "${{ github.event.inputs.pr_url }}"
-          SUITE: "${{ github.event.inputs.suite }}"
-          DISTRO: "${{ github.event.inputs.distro }}"
+          PR_URL: "${{ github.event.inputs.pr_url }}${{ inputs.pr_url }}"
+          SUITE: "${{ github.event.inputs.suite }}${{ inputs.suite }}"
+          DISTRO: "${{ github.event.inputs.distro }}${{ inputs.distro }}"
         working-directory: /var/lib/nginx/gh
         run: |
+          echo "$PR_URL" | grep '^https://api.github.com/repos/oVirt/'
           SUITE=${SUITE:-basic-suite-master}
           DISTRO=${DISTRO:-el8stream}
           SHA=$(curl -sS ${PR_URL} | jq -r .head.sha)
