github: improve example approval check
there's no "review" payload in issue_comment event, let's use a
different check.

Change-Id: I660d65a72026d2965063f1a2916ee43c8d373e47
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/.github/example-trigger.yaml
+++ b/.github/example-trigger.yaml
@@ -6,7 +6,13 @@ on:
 
 jobs:
   trigger-ost:
-    if: ${{ github.event.issue.pull_request && github.event.review.state == 'approved' && github.event.comment.body == '/ost'}}
+    if: |
+      ${{ github.event.issue.pull_request &&
+          startsWith(github.event.comment.body, '/ost') &&
+          ( github.event.comment.author_association == 'OWNER' ||
+            github.event.comment.author_association == 'MEMBER' ||
+            github.event.comment.author_association == 'COLLABORATOR' )
+      }}
     uses: oVirt/ovirt-system-tests/github/ost.yaml@master
     with:
       pr_url: ${{ github.event.issue.pull_request.url }}
