github: fix trigger job exit code
all non zero return codes are returning failure. For the end check we
need the opposite condition

Change-Id: Ibae9cbb69fd2b5b1a93c91e20b0523c94b859351
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -62,4 +62,4 @@ jobs:
             [[ "$BASE_TIME" != "$UPDATE_TIME" ]] && break
           done
           rm -f queue
-          [[ "$BASE_TIME" = "$UPDATE_TIME" ]] && { echo "Jenkins didn't pick it up"; exit 1; }
+          [[ "$BASE_TIME" != "$UPDATE_TIME" ]] || { echo "Jenkins didn't pick it up"; exit 1; }
