github: fix example-trigger's link to ost.yaml
Change-Id: I45d985c94f629b4a1466e6317d77d9b255fd9687
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/.github/example-trigger.yaml
+++ b/.github/example-trigger.yaml
@@ -13,6 +13,6 @@ jobs:
             github.event.comment.author_association == 'MEMBER' ||
             github.event.comment.author_association == 'COLLABORATOR' )
       }}
-    uses: oVirt/ovirt-system-tests/github/ost.yaml@master
+    uses: oVirt/ovirt-system-tests/.github/workflows/ost.yaml@master
     with:
       pr_url: ${{ github.event.issue.pull_request.url }}
