git: Expand .gitignore
With:
- Documantation build files
- VSCode config files
- Fix ost_utils.coverage exception and as a result apply black

Change-Id: Id246d4eeca2cf006286de1abbb63fedf280acbf8
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 .*.swp
 .bash_history
 coverage/
-!ost_utils/ost_utils/coverage/
+!ost_utils/coverage/
 /deployment
 /deployment-*
 /exported-artifacts
+/docs/_build
 *.egg-info
 *-venv
 
@@ -21,6 +22,7 @@ coverage/
 .idea
 .pydevproject
 .tox
+.vscode
 
 # Ansible files
 ###############
