--- a/.github/example-trigger.yaml
+++ b/.github/example-trigger.yaml
@@ -9,8 +9,7 @@ jobs:
     if: |
       ${{ github.event.issue.pull_request &&
           startsWith(github.event.comment.body, '/ost') &&
-          ( github.event.comment.author_association == 'OWNER' ||
-            github.event.comment.author_association == 'MEMBER' ||
+          ( github.event.comment.author_association == 'MEMBER' ||
             github.event.comment.author_association == 'COLLABORATOR' )
       }}
     uses: oVirt/ovirt-system-tests/.github/workflows/ost.yaml@master
