network: Remove shade hack
openstacksdk supports everything that was done through
the shade hack, it is not needed anymore. Remove the hack
completely.

Signed-off-by: Ales Musil <amusil@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ pytest==6.2.2
 requests
 selenium
 # network suite deps
-openstacksdk
+# TODO Use pip version once released openstacksdk>=0.62.0
+git+https://github.com/openstack/openstacksdk.git@master
 # ost_utils
 paramiko
 PyYAML
