add a hashtag which was missing

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ python:
 mkdocs:
   configuration: docs/mkdocs.yaml
 
-Optionally declare the Python requirements required to build your docs
+# Optionally declare the Python requirements required to build your docs
 python:
   install:
     - requirements: docs/requirements.txt
