github: temporarily add back pr_url parameter
needed until it's eliminated from all callers

--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -12,6 +12,9 @@ on:
       comment:
         required: false
         type: string
+      pr_url:
+        required: false
+        type: string
 
   workflow_dispatch:
     inputs:
