github: take only the workflow_dispatch pr_url parameter
it's now just a bogus parameter that's unused. let's use the one in manual dispatch, that's still useful, but discard silently otherwise

--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: trigger
         env:
           OST_APP_ID: 164117
-          PR_URL: "${{ github.event.issue.pull_request.url }}${{ github.event.inputs.pr_url }}"
+          PR_URL: "${{ github.event.issue.pull_request.url }}${{ inputs.pr_url }}"
           COMMENT: "${{ github.event.comment.body }}${{ inputs.comment }}${{ github.event.inputs.comment }}"
         working-directory: /var/lib/nginx/gh
         run: |
