--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -39,8 +39,8 @@ jobs:
       - name: trigger
         env:
           OST_APP_ID: 164117
-          PR_URL: "${{ github.event.issue.pull_request.url }}${{ inputs.pr_url }}"
-          COMMENT: "${{ github.event.comment.body }}${{ inputs.comment }}${{ github.event.inputs.comment }}"
+          PR_URL: "${{ github.event.issue.pull_request.url }}${{ github.event.inputs.pr_url }}"
+          COMMENT: "${{ github.event.comment.body }}${{ inputs.comment }}${{ github.event.inputs.comment }}${{ inputs.pr_url }}"
         working-directory: /var/lib/nginx/gh
         run: |
           echo "$PR_URL" | grep '^https://api.github.com/repos/oVirt/'
